# veX

./: .ccls  .gitignore  2  CMakeLists.txt  Makefile  README.md  game  main.cpp
.ccls-cache/@@Users@cachebag@Desktop@veX/: @Library@Developer@CommandLineTools@SDKs@MacOSX14.4.sdk@usr@include@Availability.h.blob  @Library@Developer@CommandLineTools@SDKs@MacOSX14.4.sdk@usr@include@AvailabilityInternal.h.blob  @Library@Developer@CommandLineTools@SDKs@MacOSX14.4.sdk@usr@include@AvailabilityInternalLegacy.h.blob  @Library@Developer@CommandLineTools@SDKs@MacOSX14.4.sdk@usr@include@AvailabilityVersions.h.blob  @Library@Developer@CommandLineTools@SDKs@MacOSX14.4.sdk@usr@include@TargetConditionals.h.blob  @Library@Developer@CommandLineTools@SDKs@MacOSX14.4.sdk@usr@include@__wctype.h.blob  @Library@Developer@CommandLineTools@SDKs@MacOSX14.4.sdk@usr@include@_ctermid.h.blob  @Library@Developer@CommandLineTools@SDKs@MacOSX14.4.sdk@usr@include@_ctype.h.blob  @Library@Developer@CommandLineTools@SDKs@MacOSX14.4.sdk@usr@include@_locale.h.blob  @Library@Developer@CommandLineTools@SDKs@MacOSX14.4.sdk@usr@include@_stdio.h.blob  @Library@Developer@CommandLineTools@SDKs@MacOSX14.4.sdk@usr@include@_types.h.blob  @Library@Developer@CommandLineTools@SDKs@MacOSX14.4.sdk@usr@include@_types@_intmax_t.h.blob  @Library@Developer@CommandLineTools@SDKs@MacOSX14.4.sdk@usr@include@_types@_nl_item.h.blob  @Library@Developer@CommandLineTools@SDKs@MacOSX14.4.sdk@usr@include@_types@_uint16_t.h.blob  @Library@Developer@CommandLineTools@SDKs@MacOSX14.4.sdk@usr@include@_types@_uint32_t.h.blob  @Library@Developer@CommandLineTools@SDKs@MacOSX14.4.sdk@usr@include@_types@_uint64_t.h.blob  @Library@Developer@CommandLineTools@SDKs@MacOSX14.4.sdk@usr@include@_types@_uint8_t.h.blob  @Library@Developer@CommandLineTools@SDKs@MacOSX14.4.sdk@usr@include@_types@_uintmax_t.h.blob  @Library@Developer@CommandLineTools@SDKs@MacOSX14.4.sdk@usr@include@_types@_wctrans_t.h.blob  @Library@Developer@CommandLineTools@SDKs@MacOSX14.4.sdk@usr@include@_types@_wctype_t.h.blob  @Library@Developer@CommandLineTools@SDKs@MacOSX14.4.sdk@usr@include@_wctype.h.blob  @Library@Developer@CommandLineTools@SDKs@MacOSX14.4.sdk@usr@include@_xlocale.h.blob  @Library@Developer@CommandLineTools@SDKs@MacOSX14.4.sdk@usr@include@alloca.h.blob  @Library@Developer@CommandLineTools@SDKs@MacOSX14.4.sdk@usr@include@arm@_limits.h.blob  @Library@Developer@CommandLineTools@SDKs@MacOSX14.4.sdk@usr@include@arm@_mcontext.h.blob  @Library@Developer@CommandLineTools@SDKs@MacOSX14.4.sdk@usr@include@arm@_types.h.blob  @Library@Developer@CommandLineTools@SDKs@MacOSX14.4.sdk@usr@include@arm@arch.h.blob  @Library@Developer@CommandLineTools@SDKs@MacOSX14.4.sdk@usr@include@arm@endian.h.blob  @Library@Developer@CommandLineTools@SDKs@MacOSX14.4.sdk@usr@include@arm@limits.h.blob  @Library@Developer@CommandLineTools@SDKs@MacOSX14.4.sdk@usr@include@arm@signal.h.blob  @Library@Developer@CommandLineTools@SDKs@MacOSX14.4.sdk@usr@include@arm@types.h.blob  @Library@Developer@CommandLineTools@SDKs@MacOSX14.4.sdk@usr@include@c++@v1@__algorithm@adjacent_find.h.blob  @Library@Developer@CommandLineTools@SDKs@MacOSX14.4.sdk@usr@include@c++@v1@__algorithm@all_of.h.blob  @Library@Developer@CommandLineTools@SDKs@MacOSX14.4.sdk@usr@include@c++@v1@__algorithm@any_of.h.blob  @Library@Developer@CommandLineTools@SDKs@MacOSX14.4.sdk@usr@include@c++@v1@__algorithm@binary_search.h.blob  @Library@Developer@CommandLineTools@SDKs@MacOSX14.4.sdk@usr@include@c++@v1@__algorithm@clamp.h.blob  @Library@Developer@CommandLineTools@SDKs@MacOSX14.4.sdk@usr@include@c++@v1@__algorithm@comp.h.blob  @Library@Developer@CommandLineTools@SDKs@MacOSX14.4.sdk@usr@include@c++@v1@__algorithm@comp_ref_type.h.blob  @Library@Developer@CommandLineTools@SDKs@MacOSX14.4.sdk@usr@include@c++@v1@__algorithm@copy.h.blob  @Library@Developer@CommandLineTools@SDKs@MacOSX14.4.sdk@usr@include@c++@v1@__algorithm@copy_backward.h.blob  (+945 more)
.ccls-cache/@@home@cachebag@Desktop@veX/: @usr@include@SFML@Config.hpp.blob  @usr@include@SFML@Graphics.hpp.blob  @usr@include@SFML@Graphics@BlendMode.hpp.blob  @usr@include@SFML@Graphics@CircleShape.hpp.blob  @usr@include@SFML@Graphics@Color.hpp.blob  @usr@include@SFML@Graphics@ConvexShape.hpp.blob  @usr@include@SFML@Graphics@Drawable.hpp.blob  @usr@include@SFML@Graphics@Export.hpp.blob  @usr@include@SFML@Graphics@Font.hpp.blob  @usr@include@SFML@Graphics@Glsl.hpp.blob  @usr@include@SFML@Graphics@Glsl.inl.blob  @usr@include@SFML@Graphics@Glyph.hpp.blob  @usr@include@SFML@Graphics@Image.hpp.blob  @usr@include@SFML@Graphics@PrimitiveType.hpp.blob  @usr@include@SFML@Graphics@Rect.hpp.blob  @usr@include@SFML@Graphics@Rect.inl.blob  @usr@include@SFML@Graphics@RectangleShape.hpp.blob  @usr@include@SFML@Graphics@RenderStates.hpp.blob  @usr@include@SFML@Graphics@RenderTarget.hpp.blob  @usr@include@SFML@Graphics@RenderTexture.hpp.blob  @usr@include@SFML@Graphics@RenderWindow.hpp.blob  @usr@include@SFML@Graphics@Shader.hpp.blob  @usr@include@SFML@Graphics@Shape.hpp.blob  @usr@include@SFML@Graphics@Sprite.hpp.blob  @usr@include@SFML@Graphics@Text.hpp.blob  @usr@include@SFML@Graphics@Texture.hpp.blob  @usr@include@SFML@Graphics@Transform.hpp.blob  @usr@include@SFML@Graphics@Transformable.hpp.blob  @usr@include@SFML@Graphics@Vertex.hpp.blob  @usr@include@SFML@Graphics@VertexArray.hpp.blob  @usr@include@SFML@Graphics@VertexBuffer.hpp.blob  @usr@include@SFML@Graphics@View.hpp.blob  @usr@include@SFML@System.hpp.blob  @usr@include@SFML@System@Clock.hpp.blob  @usr@include@SFML@System@Err.hpp.blob  @usr@include@SFML@System@Export.hpp.blob  @usr@include@SFML@System@FileInputStream.hpp.blob  (+37 more)
include/: AssetType.hpp  Background.hpp  ButtonInteraction.hpp  Enemy.hpp  LevelEditor.hpp  Orb.hpp  Platform.hpp  Player.hpp  SentinelInteraction.hpp  SidebarManager.hpp  TileManager.hpp  TitleScreen.hpp
levels/: level1.txt  level2.txt  level3.txt
src/: Background.cpp  ButtonInteraction.cpp  Enemy.cpp  LevelEditor.cpp  Orb.cpp  Platform.cpp  Player.cpp  SentinelInteraction.cpp  SidebarManager.cpp  TileManager.cpp  TitleScreen.cpp  main.cpp
(+40 files in other folders)
